kubernetes/argo-cd/projects/nebius/production-hm/skypilot/environments/production/kubernetes-manifests/hm-skypilot-forward-authentication-middleware.yaml
# https://doc.traefik.io/traefik/reference/routing-configuration/http/middlewares/forwardauth/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hm-skypilot-forward-authentication-middleware
  namespace: production-hm-skypilot
  labels:
    app.kubernetes.io/name: hm-skypilot-forward-authentication-middleware
    app.kubernetes.io/part-of: production-hm-skypilot
spec:
  forwardAuth:
    address: http://skypilot-oauth2-proxy.production-hm-skypilot.svc:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
