kubernetes/argo-cd/projects/nebius/production-hm/skypilot/environments/production/kubernetes-manifests/hm-skypilot-service-account-token-middleware.yaml
# https://doc.traefik.io/traefik/reference/routing-configuration/http/middlewares/headers/
# Middleware to set X-Skypilot-Auth-Mode header for service account token requests
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hm-skypilot-service-account-token-middleware
  namespace: production-hm-skypilot
  labels:
    app.kubernetes.io/name: hm-skypilot-service-account-token-middleware
    app.kubernetes.io/part-of: production-hm-skypilot
spec:
  headers:
    customRequestHeaders:
      X-Skypilot-Auth-Mode: token
